# ESP32-WS2812-LED-for-Aquarium

./: .cproject  CMakeLists.txt  Command-Response-JSON.txt  README.md  partitions.csv  sdkconfig  sdkconfig.old
main/: CMakeLists.txt  Common_Header.h  HTTP_Server.c  LED_Strip_Functions.c  Parse_Commands.c  UART0_Communication_Functions.c  idf_component.yml  main.c  native_ota_example.c
